Update README and documentation
Signed-off-by: Кристина Ланчуковская <k.lanchukovskaya@g.nsu.ru>