@@ -1,3 +1,5 @@
 # MoneyCalc
 
 MoneyCalc - кредитный и депозитный калькуляторы
+
+Для запуска на jdk-11+ необходимы параметры VM: --module-path <PATH_TO_JAVAFX_SDK> --add-modules javafx.controls,javafx.fxml
